Update stores window with professional store cards and images

--- a/client/stores.html
+++ b/client/stores.html
@@ -36,13 +36,9 @@
     }
     .store-img {
       width: 100%;
-      height: 150px;
-      background: linear-gradient(135deg, var(--emerald) 0%, var(--teal) 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 36px;
+      height: 160px;
+      object-fit: cover;
+      display: block;
     }
     .store-info {
       padding: 16px;
@@ -88,7 +84,7 @@
     <h2 class="page-title">All Stores</h2>
     <div class="stores-grid">
       <div class="store-card">
-        <div class="store-img"><i class="fa-solid fa-utensils"></i></div>
+        <img src="https://images.unsplash.com/photo-1568901346375-23c9450c58cd" alt="Bes Burger House" class="store-img" />
         <div class="store-info">
           <h3>Bes Burger House</h3>
           <p>Fast Food • Open Now</p>
@@ -96,7 +92,7 @@
         </div>
       </div>
       <div class="store-card">
-        <div class="store-img"><i class="fa-solid fa-utensils"></i></div>
+        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c" alt="Pa-Buy Kitchen" class="store-img" />
         <div class="store-info">
           <h3>Pa-Buy Kitchen</h3>
           <p>Filipino • Open Now</p>
@@ -104,7 +100,7 @@
         </div>
       </div>
       <div class="store-card">
-        <div class="store-img"><i class="fa-solid fa-utensils"></i></div>
+        <img src="https://images.unsplash.com/photo-1512568400610-62da28bc8a13" alt="Teal Cup" class="store-img" />
         <div class="store-info">
           <h3>Teal Cup</h3>
           <p>Café • Open Now</p>
@@ -112,11 +108,43 @@
         </div>
       </div>
       <div class="store-card">
-        <div class="store-img"><i class="fa-solid fa-utensils"></i></div>
+        <img src="https://images.unsplash.com/photo-1535521954131-ef3fa48c5b97" alt="Dragon Express" class="store-img" />
         <div class="store-info">
           <h3>Dragon Express</h3>
           <p>Asian • Open Now</p>
           <p>4.6 ⭐ (180 reviews)</p>
+        </div>
+      </div>
+      <div class="store-card">
+        <img src="https://images.unsplash.com/photo-1571115765669-251cb3cee4dc" alt="Pizza Palace" class="store-img" />
+        <div class="store-info">
+          <h3>Pizza Palace</h3>
+          <p>Italian • Open Now</p>
+          <p>4.7 ⭐ (95 reviews)</p>
+        </div>
+      </div>
+      <div class="store-card">
+        <img src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df" alt="Sushi Master" class="store-img" />
+        <div class="store-info">
+          <h3>Sushi Master</h3>
+          <p>Japanese • Open Now</p>
+          <p>4.9 ⭐ (220 reviews)</p>
+        </div>
+      </div>
+      <div class="store-card">
+        <img src="https://images.unsplash.com/photo-1565958011457-ce93c6900144" alt="Taco Fiesta" class="store-img" />
+        <div class="store-info">
+          <h3>Taco Fiesta</h3>
+          <p>Mexican • Open Now</p>
+          <p>4.5 ⭐ (140 reviews)</p>
+        </div>
+      </div>
+      <div class="store-card">
+        <img src="https://images.unsplash.com/photo-1543521521-5fc751e2a00c" alt="Thrive Salads" class="store-img" />
+        <div class="store-info">
+          <h3>Thrive Salads</h3>
+          <p>Healthy • Open Now</p>
+          <p>4.6 ⭐ (110 reviews)</p>
         </div>
       </div>
     </div>
